istio/servicemonitors.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-waypoint-metrics
  namespace: production-retail
  labels:
    istio.io/waypoint-for: service
spec:
  selector:
    istio.io/waypoint-for: service
  ports:
    - name: http-envoy-prom
      port: 15090
      targetPort: 15090
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ztunnel
  namespace: istio-system
  labels:
    app: ztunnel
spec:
  selector:
    app: ztunnel
  ports:
    - name: ztunnel-stats
      port: 15020
      targetPort: 15020
      protocol: TCP
