istio/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-traffic-split
  namespace: production-retail
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: catalog-service
      port: 8082
  hostnames:
    - "catalog-service.production-retail.svc.cluster.local"
  rules:
    - backendRefs:
        - name: catalog-stable
          port: 8082
          weight: 90
        - name: catalog-canary
          port: 8082
          weight: 10
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gateway-waypoint
  namespace: production-retail
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: api-gateway-service
      port: 8080
  hostnames:
    - "api-gateway-service.production-retail.svc.cluster.local"
  rules:
    - backendRefs:
        - name: api-gateway-service
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-waypoint
  namespace: production-retail
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: auth-service
      port: 8081
  hostnames:
    - "auth-service.production-retail.svc.cluster.local"
  rules:
    - backendRefs:
        - name: auth-service
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-waypoint
  namespace: production-retail
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: order-service
      port: 8083
  hostnames:
    - "order-service.production-retail.svc.cluster.local"
  rules:
    - backendRefs:
        - name: order-service
          port: 8083
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: history-waypoint
  namespace: production-retail
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: history-service
      port: 8084
  hostnames:
    - "history-service.production-retail.svc.cluster.local"
  rules:
    - backendRefs:
        - name: history-service
          port: 8084
